<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <Switch
            android:text="@string/login_activity_remember_username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="115dp" android:id="@+id/rememberUsernameSwitch" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/leftGuideline"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/usernameEditText"/>

    <Switch
            android:text="@string/login_activity_remember_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="115dp" android:id="@+id/rememberPasswordSwitch" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/leftGuideline"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"/>

    <android.support.constraint.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="22dp"/>

    <android.support.constraint.Guideline
            android:id="@+id/rightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="22dp" />


    <TextView
            android:text="@string/login_activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:textSize="25sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="@+id/leftGuideline"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
            android:layout_marginEnd="8dp"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/login_activity_username_hint"
            android:ems="10"
            android:id="@+id/usernameEditText"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/title" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/leftGuideline" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideline"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/login_activity_password_hint"
            android:ems="10"
            android:id="@+id/passwordEditText"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/leftGuideline"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/rememberUsernameSwitch"/>
    <Button
            android:text="@string/login_activity_login_button_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/rememberPasswordSwitch"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideline" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/leftGuideline" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/login_activity_signup_button_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signupButton"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/leftGuideline"
            android:layout_marginStart="8dp"/>
</android.support.constraint.ConstraintLayout>