<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SearchActivity">




        <TextView
                android:id="@+id/emptySearchResultsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/no_search_results"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="gone" />

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/emptySearchResultsTextView"
                >
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                        <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="textPersonName"
                                android:hint="@string/search_hint"
                                android:ems="10"
                                android:id="@+id/searchEditText"
                                android:layout_marginStart="8dp"
                                app:layout_constraintStart_toStartOf="parent"
                                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                                />
                        <Button
                                android:text="@string/search_button_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/button" app:layout_constraintStart_toEndOf="@+id/searchEditText"
                                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                                android:layout_marginEnd="8dp"
                                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                        android:id="@+id/searchResultRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                       />
        </LinearLayout>


</android.support.constraint.ConstraintLayout>